Fixed the clicking of table rows on pages other than the first page (companies page)

--- a/stocksim/stocksite/templates/companies.html
+++ b/stocksim/stocksite/templates/companies.html
@@ -53,7 +53,8 @@
         {% endif %}
       });
           
-      $( "tbody>tr" ).click(function()
+      //$( "tbody>tr" ).click(function()
+      $(document).on("click", "tbody>tr", function()  
       {
         location.href = $(this).find("a").attr("href");
       });
