--- a/stocksim/stocksite/templates/company.html
+++ b/stocksim/stocksite/templates/company.html
@@ -64,7 +64,7 @@
       <h3>Value: ${{ value_stocks|floatformat:2|intcomma }}</h3>
     </div>
     <div class="span4 text-center">
-      <h3>Change: +0.05%</h3>
+      <h3>Change: {{ percentage_change|floatformat:2|intcomma }}%</h3>
     </div>
   </div>
   
