Highstock charts now correctly deal with irregular intervals

--- a/stocksim/stocksite/templates/company.html
+++ b/stocksim/stocksite/templates/company.html
@@ -108,6 +108,9 @@
             title : {
                 text : '{{ company.shortName }} Stock Today'
             },
+            xAxis: {
+                ordinal: false
+            },
             series : [{
                 name : '{{ company.shortName }}',
                 data : data
