--- a/stocksim/stocksite/templates/base.html
+++ b/stocksim/stocksite/templates/base.html
@@ -87,8 +87,10 @@
             <p class="navbar-text pull-right">
               <a href="/settings" class="navbar-link" style="font-weight:bold;">{{ user.username }}</a>
               &middot;
-              {% load humanize %}
-              ${{ user.get_profile.money|floatformat:2|intcomma }}
+              <span id="money">
+                {% load humanize %}
+                ${{ user.get_profile.money|floatformat:2|intcomma }}
+              </span>
               &middot;
               <a href="/accounts/logout" class="navbar-link">Sign out</a>
             </p>
