Updated company template to use volume data. Updated backend to run all mapreduce commands.

--- a/stocksim/stocksite/templates/company.html
+++ b/stocksim/stocksite/templates/company.html
@@ -59,6 +59,10 @@
             <td>{{ last.volume }}</td>
           </tr>
           {% endwith %}
+          <tr>
+            <td><strong>Bought volume</strong></td>
+            <td>{{ company.totalStocks }}</td>
+          </tr>
         </tbody>
       </table>
     </div>
